<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/info_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/teal_200"
        android:text="@string/información"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ems="10"
        android:textColorHint="@color/teal_200"/>

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:text="@string/nombre"
        android:textColorHint="@color/teal_200"
        />

    <TextView
        android:id="@+id/name_resul_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/teal_200"
        android:textStyle="italic"
        android:text="@string/nombre"
        android:textColorHint="@color/teal_200"/>

    <TextView
        android:id="@+id/ubication_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:text="@string/ubicacion"
        android:textColorHint="@color/teal_200"
        />

    <TextView
        android:id="@+id/ubication_resul_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/teal_200"
        android:textStyle="italic"
        android:text="@string/ubicacion"
        android:textColorHint="@color/teal_200"/>

    <TextView
        android:id="@+id/tamaño_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:text="@string/tamaño"
        android:textColorHint="@color/teal_200"
        />

    <TextView
        android:id="@+id/tamaño_resul_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/teal_200"
        android:textStyle="italic"
        android:text="@string/tamaño"
        android:textColorHint="@color/teal_200"/>

    <TextView
        android:id="@+id/modificacion_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:text="@string/modificacion"
        android:textColorHint="@color/teal_200"
        />

    <TextView
        android:id="@+id/modificacion_resul_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/teal_200"
        android:textStyle="italic"
        android:text="@string/modificacion"
        android:textColorHint="@color/teal_200"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_aceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/aceptar" />
    </LinearLayout>
</LinearLayout>