<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical"
    tools:context=".ui.view.MainActivity">

    <TextView
        android:id="@+id/ruta_actual"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:textColor="#565656"
        android:textSize="18sp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="70dp"
        android:paddingBottom="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lista_ficheros"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="420dp"
        android:background="@color/toolbar_back_ground"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/info_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/info"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/rename_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/rename"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ranombrar"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/copy_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/copy"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/copy"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/move_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/move"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/move"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_delete"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="420dp"
        android:background="@color/toolbar_back_ground"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/accept_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_check"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_cancel"
            app:tint="@color/white" />
    </LinearLayout>
</RelativeLayout>

